all working fine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,7 @@
     <string name="create_lead">Create Lead</string>
     <string name="update_lead">Update Lead</string>
     <string name="master">Masters</string>
-    <string name="master1">Master</string>
-    <string name="setting">Setting</string>
+    <string name="setting">Settings</string>
     <string name="mis_report">MIS Reports</string>
     <string name="notification">Notification</string>
     <string name="header_text_home">Home</string>
@@ -68,6 +67,7 @@
     <string name="leadupdatelog">Lead Update Log</string>
     <string name="updatelead">Update Lead</string>
     <string name="closelead">Close Lead</string>
+
 
 
     //other
