all master data getting store in database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,7 @@
 
     //other
     <string name="open">Open</string>
+    <string name="welcome">Welcome:</string>
 
     //Master spinner
     <string-array name="titles">
