--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="username">Username</string>
     <string name="text_footer">Powered By smartforce CRM</string>
     <string name="forgetPassword"><u>Forgot Password?  </u></string>
-
+<string name="check_yes">Yes</string>
+    <string name="check_no">No</string>
 
     //home screen
 
@@ -71,6 +72,8 @@
     <string name="contacted">Contacted</string>
     <string name="notcontacted">Not Contacted</string>
     <string name="nextmeeting">Next Metting Date</string>
+    <string name="lastmeeting">Last Metting Date</string>
+    <string name="lastmettingupdate">Last Metting Update</string>
     <string name="mettingagenda">Meeting Agenda</string>
     <string name="leadupdatelog">Lead Update Log</string>
     <string name="updatelead">Update Lead</string>
