Login web Service done by-Aniket Adsul

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,6 +134,7 @@
     <string name="column_userId">userId</string>
     <string name="column_username">username</string>
     <string name="column_password">password</string>
+    <string name="column_attendance">Attendance</string>
 
     //master details column
 
