--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="header_text_dashboard">Dashboard</string>
     <string name="header_text_create_lead">Create Lead</string>
     <string name="header_text_update_lead">Update Lead</string>
+    <string name="Header_text_Notification">Notification</string>
 
     <!--//lead details-->
     <string name="Sourceoflead">Source of Lead</string>
