--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,7 +285,11 @@
     <string name="ifsc">ifsc</string>
     <string name="micr">micr</string>
     <string name="result">result</string>
-
+      <!--change password-->
+    <string name="old_pass">Old Password</string>
+    <string name="new_pass">New Password</string>
+    <string name="confirm_pass">Confirm Password</string>
+    <string name="change_pass">Change Password</string>
 
 
 </resources>
