Login Web service Changes done By Aniket Adsul

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,8 @@
     <string name="column_username">username</string>
     <string name="column_password">password</string>
     <string name="column_attendance">Attendance</string>
+    <string name="column_role_id">is_rm</string>
+
 
     //master details column
 
