Attendence done by Aniket Adsul

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="header_text_update_lead">Update Lead</string>
     <string name="Header_text_Notification">Notification</string>
     <string name="status_report">Status Report</string>
+    <string name="attendence_report">Attedence Report</string>
 
     <!--//lead details-->
     <string name="Sourceoflead">Source of Lead</string>
